@@ -36,6 +36,7 @@ correlation.o : ../libs/kind.o
 correlation.o : ../libs/log_module.o
 correlation.o : ../libs/mp.o
 correlation.o : ../libs/parameters.o
+correlation.o : ../libs/parser.o
 correlation.o : ../libs/timing.o
 correlation.o : ../wannier/io_module.o
 correlation.o : ../wannier/operator.o
